--- a/index.html
+++ b/index.html
@@ -51,51 +51,49 @@
         </ul>
     </nav>
 </section>
-<section>
-    <main>
-        <div class="container ">
-            <h1>Home</h1>
-            <div class="home-container">
-                <!--            -->
-                <div class="card course-work-card">
-                    <div class="card-header">Course Work</div>
-                    <div class="card-body">
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </div>
+<main>
+    <section class="container ">
+        <h1>Home</h1>
+        <div class="home-container">
+            <!--            -->
+            <div class="card course-work-card">
+                <div class="card-header">Course Work</div>
+                <div class="card-body">
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
                 </div>
-                <!--            -->
-                <div class="card location-card">
-                    <div class="card-header">Lilongwe, Malawi</div>
-                    <div class="card-body">
-                        <figure>
-                            <img src="images/malawi.jpg" alt="Mulange Mountain">
-                            <figcaption>Mulange Mountain</figcaption>
-                        </figure>
-                    </div>
+            </div>
+            <!--            -->
+            <div class="card location-card">
+                <div class="card-header">Lilongwe, Malawi</div>
+                <div class="card-body">
+                    <figure>
+                        <img src="images/malawi.jpg" alt="Mulange Mountain">
+                        <figcaption>Mulange Mountain</figcaption>
+                    </figure>
                 </div>
-                <!--            -->
-                <div class="card courses-card">
-                    <div class="card-header">Web and Computer Programming Certificate</div>
-                    <div class="card-subheader">
-                        <button id="filter-all">All</button>
-                        <button id="filter-cse">CSE</button>
-                        <button id="filter-wdd">WDD</button>
-                    </div>
-                    <div class="card-body">
-                        <div class="courses-list">
+            </div>
+            <!--            -->
+            <div class="card courses-card">
+                <div class="card-header">Web and Computer Programming Certificate</div>
+                <div class="card-subheader">
+                    <button id="filter-all">All</button>
+                    <button id="filter-cse">CSE</button>
+                    <button id="filter-wdd">WDD</button>
+                </div>
+                <div class="card-body">
+                    <div class="courses-list">
 
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </main>
-</section>
+    </section>
+</main>
 <section>
     <footer>
         <div class="container footer-container">
