--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
-    <title>Nedie Yassin</title>
-    <meta name="author" content="Nedie Yassin - Personal Website"/>
+    <title>Nedie Yassin - Personal Website</title>
+    <meta name="author" content="Nedie Yassin"/>
     <meta name="description" content="Nedie Yassin is a BYU Pathway student studying Software Development"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
