--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
     <meta name="description" content="Nedie Yassin is a BYU Pathway student studying Software Development"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" media="print" onload="this.onload=null;this.media='all';">
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/courses.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
 </head>
 <body>
 <header>
+    <!--    -->
     <div class="container header-container">
         <img class="header-img" src="images/profile.jpeg" alt="Profile Picture"/>
         <span class="header-text">Nedie Yassin</span>
