--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Nedie Yassin is a BYU Pathway student studying Software Development"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" media="print" onload="this.onload=null;this.media='all';">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet" media="print" onload="this.onload=null;this.media='all';">
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -26,7 +26,7 @@
     <div class="container header-container">
         <img class="header-img" src="images/profile.jpeg" alt="Profile Picture"/>
         <span class="header-text">Nedie Yassin</span>
-        <button id="nav-button">
+        <button id="nav-button" aria-label="Open Menu">
             <svg id="nav-button-open-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                  fill="none"
                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
