--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <meta name="description" content="Nedie Yassin is a BYU Pathway student studying Software Development"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet" media="print" onload="this.onload=null;this.media='all';">
-
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/common.css">
