--- a/index.html
+++ b/index.html
@@ -10,14 +10,25 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
+    <link rel="icon" href="favicon.ico">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/courses.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
+
+    <meta property="og:title" content="Nedie Yassin">
+    <meta property="og:description"
+          content="Nedie Yassin is a BYU Pathway student studying Software Development">
+    <meta property="og:url" content="https://nedieyassin.github.io/wdd231/">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:image"
+          content="https://nedieyassin.github.io/wdd231/images/profile.jpeg"/>
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Nedie Yassin Website">
+
 </head>
 <body>
 <header>
