--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -24,6 +24,8 @@
     <meta property="og:description"
           content="A chamber of commerce is a local organization of businesses that work together to strengthen the business interests of the group. The intent of a chamber of commerce is to foster networking and to advocate on the behalf of the community.">
     <meta property="og:url" content="https://your-github-username.github.io/wdd231/chamber">
+    <meta property="og:image"
+          content="https://nedieyassin.github.io/wdd231/chamber/images/logo.png"/>
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Chamber of Commerce Website">
@@ -80,9 +82,9 @@
             <p>+265 998 046 884</p>
         </div>
         <div class="social-icons">
-            <a href=""><img height="40px" src="/chamber/images/youtube.svg" alt="Youtube"></a>
-            <a href=""><img height="40px" src="/chamber/images/x.svg" alt="X"></a>
-            <a href=""><img height="40px" src="/chamber/images/facebook.svg" alt="Facebook"></a>
+            <a href="#"><img height="40px" src="/chamber/images/youtube.svg" alt="Youtube"></a>
+            <a href="#"><img height="40px" src="/chamber/images/x.svg" alt="X"></a>
+            <a href="#"><img height="40px" src="/chamber/images/facebook.svg" alt="Facebook"></a>
         </div>
         <div>
             <p>WDD231 Class Project</p>
