--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -64,14 +64,16 @@
 
     </div>
 </header>
-<section class="chamber-members">
-    <h1>Chamber Members</h1>
-    <div class="view-toggle">
-        <button id="gridBtn">Grid View</button>
-        <button id="listBtn">List View</button>
-    </div>
-    <div id="member-list" class="grid-view"></div>
-</section>
+<main>
+    <section class="chamber-members">
+        <h1>Chamber Members</h1>
+        <div class="view-toggle">
+            <button id="gridBtn">Grid View</button>
+            <button id="listBtn">List View</button>
+        </div>
+        <div id="member-list" class="grid-view"></div>
+    </section>
+</main>
 <footer>
     <div class="container footer-container">
         <div>
