--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -84,9 +84,9 @@
             <p>+265 998 046 884</p>
         </div>
         <div class="social-icons">
-            <a href="#"><img height="40px" src="/chamber/images/youtube.svg" alt="Youtube"></a>
-            <a href="#"><img height="40px" src="/chamber/images/x.svg" alt="X"></a>
-            <a href="#"><img height="40px" src="/chamber/images/facebook.svg" alt="Facebook"></a>
+            <a href="#"><img height="40" src="/chamber/images/youtube.svg" alt="Youtube"></a>
+            <a href="#"><img height="40" src="/chamber/images/x.svg" alt="X"></a>
+            <a href="#"><img height="40" src="/chamber/images/facebook.svg" alt="Facebook"></a>
         </div>
         <div>
             <p>WDD231 Class Project</p>
