--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -35,7 +35,7 @@
 <header>
     <div class="container header-container">
         <div class="logo">
-            <img width="26" height="26" src="/chamber/images/logo.png" alt="Chamber of Commerce Logo">
+            <img width="26" height="26" src="images/logo.png" alt="Chamber of Commerce Logo">
             <span>Corset</span>
         </div>
         <button id="nav-button" aria-label="Open Menu">
@@ -84,9 +84,9 @@
             <p>+265 998 046 884</p>
         </div>
         <div class="social-icons">
-            <a href="#"><img height="40" src="/chamber/images/youtube.svg" alt="Youtube"></a>
-            <a href="#"><img height="40" src="/chamber/images/x.svg" alt="X"></a>
-            <a href="#"><img height="40" src="/chamber/images/facebook.svg" alt="Facebook"></a>
+            <a href="#"><img height="40" src="images/youtube.svg" alt="Youtube"></a>
+            <a href="#"><img height="40" src="images/x.svg" alt="X"></a>
+            <a href="#"><img height="40" src="images/facebook.svg" alt="Facebook"></a>
         </div>
         <div>
             <p>WDD231 Class Project</p>
