--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -54,12 +54,12 @@
             </svg>
         </button>
         <nav id="nav-container" class="nav-container">
-            <ul class="nav-container-list ">
-                <li><a class="nav-item active" href="#">Home</a></li>
-                <li><a class="nav-item " href="#">Directory</a></li>
-                <li><a class="nav-item " href="#">Join</a></li>
-                <li><a class="nav-item " href="#">Recover</a></li>
-            </ul>
+            <div class="nav-container-list ">
+                <a class="nav-item active" href="#">Home</a>
+                <a class="nav-item " href="#">Directory</a>
+                <a class="nav-item " href="#">Join</a>
+                <a class="nav-item " href="#">Recover</a>
+            </div>
         </nav>
 
     </div>
