--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -84,7 +84,9 @@
             <p>+265 998 046 884</p>
         </div>
         <div class="social-icons">
-
+            <a href="#"><img height="40" src="images/youtube.svg" alt="Youtube"></a>
+            <a href="#"><img height="40" src="images/x.svg" alt="X"></a>
+            <a href="#"><img height="40" src="images/facebook.svg" alt="Facebook"></a>
         </div>
         <div>
             <p>WDD231 Class Project</p>
