--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -80,8 +80,8 @@
             <p><b>Corset Chamber of Commerce</b></p>
             <p>Lilongwe, Malawi</p>
             <p>Corset, Box 199</p>
-            <p>info@corset.com</p>
-            <p>+265 998 046 884</p>
+            <p><a href="mailto:info@corset.com">info@corset.com</a></p>
+            <p><a href="tel:+265998046884">+265 998 046 884</a></p>
         </div>
         <div class="social-icons">
             <a href="#"><img height="40" src="images/youtube.svg" alt="Youtube"></a>
