--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -65,7 +65,7 @@
     </div>
 </header>
 <main>
-    <section class="chamber-members">
+    <section class="chamber-members container">
         <h1>Chamber Members</h1>
         <div class="view-toggle">
             <button id="gridBtn">Grid View</button>
