--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="Chamber of Commerce">
     <meta property="og:description"
           content="A chamber of commerce is a local organization of businesses that work together to strengthen the business interests of the group. The intent of a chamber of commerce is to foster networking and to advocate on the behalf of the community.">
-    <meta property="og:url" content="https://your-github-username.github.io/wdd231/chamber">
+    <meta property="og:url" content="https://nedieyassin.github.io/wdd231/chamber">
     <meta property="og:image"
           content="https://nedieyassin.github.io/wdd231/chamber/images/logo.png"/>
     <meta property="og:locale" content="en_US">
@@ -57,7 +57,7 @@
             <div class="nav-container-list ">
                 <a class="nav-item active" href="/chamber">Home</a>
                 <a class="nav-item " href="/chamber/directory.html">Directory</a>
-                <a class="nav-item " href="#">Join</a>
+                <a class="nav-item " href="/chamber/join.html">Join</a>
                 <a class="nav-item " href="#">Recover</a>
             </div>
         </nav>
