--- a/chamber/join.html
+++ b/chamber/join.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <link rel="icon" type="image/x-icon" href="/chamber/favicon.ico">
+    <link rel="icon"  href="/chamber/favicon.ico" type="image/x-icon">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/join.js" defer></script>
