--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -58,7 +58,7 @@
                 <a class="nav-item " href="/chamber">Home</a>
                 <a class="nav-item active " href="/chamber/directory.html">Directory</a>
                 <a class="nav-item " href="/chamber/join.html">Join</a>
-                <a class="nav-item " href="#">Recover</a>
+                <a class="nav-item" href="/chamber/discover.html">Discover</a>
             </div>
         </nav>
 
