--- a/chamber/join.html
+++ b/chamber/join.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <link rel="icon"  href="/chamber/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/chamber/favicon.ico" type="image/x-icon">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/join.js" defer></script>
@@ -57,7 +57,7 @@
                 <a class="nav-item " href="/chamber">Home</a>
                 <a class="nav-item " href="/chamber/directory.html">Directory</a>
                 <a class="nav-item active" href="/chamber/join.html">Join</a>
-                <a class="nav-item " href="#">Recover</a>
+                <a class="nav-item" href="/chamber/discover.html">Discover</a>
             </div>
         </nav>
 
@@ -84,7 +84,7 @@
                     <label class="form-field">Organization Title
                         <input type="text" id="orgTitle" name="orgTitle"
                                autocomplete="organization-title" pattern="[a-zA-Z\s\-]{7,}"
-                               >
+                        >
                     </label>
 
                     <label class="form-field">Email*
