--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <ul id="nav-container" class="container nav-container">
             <li><a class="nav-item active" href="#">Home</a></li>
             <li><a class="nav-item " href="#">Chamber</a></li>
-            <li><a class="nav-item " href="#">Final</a></li>
+            <li><a class="nav-item " href="/finalproject/index.html">Final</a></li>
             <li><a class="nav-item " href="#">Github Profile</a></li>
             <li><a class="nav-item " href="#">LinkedIn</a></li>
         </ul>
