--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,8 +24,7 @@
     <meta property="og:description"
           content="A chamber of commerce is a local organization of businesses that work together to strengthen the business interests of the group. The intent of a chamber of commerce is to foster networking and to advocate on the behalf of the community.">
     <meta property="og:url" content="https://nedieyassin.github.io/wdd231/chamber">
-    <meta property="og:image"
-          content="https://nedieyassin.github.io/wdd231/chamber/images/logo.png"/>
+    <meta property="og:image" content="https://nedieyassin.github.io/wdd231/chamber/images/logo.png"/>
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Chamber of Commerce Website">
