--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -41,7 +41,7 @@
     <div class="header-content">
         <div class="logo">
             <a href="index.html">
-                <img src="images/logo.png" alt="Otaku Oasis Logo" width="50" height="50">
+                <img src="images/logo.png" alt="Otaku Oasis Logo"  loading="lazy" width="50" height="50">
                 <span>Otaku Oasis</span>
             </a>
         </div>
