--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans&display=swap"
           rel="stylesheet">
 
-    <link rel="icon" type="image/x-icon" href="/finalproject/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/small.css">
