--- a/finalproject/anime.html
+++ b/finalproject/anime.html
@@ -76,6 +76,8 @@
         <p>&copy; <span id="currentYear"></span> Otaku Oasis. All rights reserved.</p>
         <p>Last Modified: <span id="lastModified"></span></p>
         <a href="website-plan.html">Website Plan</a>
+        <a href="https://jikan.moe/" target="_blank">Data from JIKAN API</a>
+        <a href="https://youtu.be/2d59wAGaaW0" target="_blank">Demo Video</a>
     </div>
 </footer>
 
