--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -40,7 +40,7 @@
     <div class="header-content">
         <div class="logo">
             <a href="index.html">
-                <img src="images/logo.png" alt="Otaku Oasis Logo"  loading="lazy" width="50" height="50">
+                <img src="images/logo.png" alt="Otaku Oasis Logo" loading="lazy" width="50" height="50">
                 <span>Otaku Oasis</span>
             </a>
         </div>
@@ -99,6 +99,8 @@
         <p>&copy; <span id="currentYear"></span> Otaku Oasis. All rights reserved.</p>
         <p>Last Modified: <span id="lastModified"></span></p>
         <a href="website-plan.html">Website Plan</a>
+        <a href="https://jikan.moe/" target="_blank">Data from JIKAN API</a>
+        <a href="https://youtu.be/2d59wAGaaW0" target="_blank">Demo Video</a>
     </div>
 </footer>
 
